# dbt-dojo

./: .gitignore  .sqlfluff  README.md  dbt_project.yml  profiles.example.yml  pyproject.toml
macros/: convert_currency.sql  unpack_json_field.sql
models/marts/: _mrt_models.yml  mrt_order_summary.sql
models/staging/: _sources.yml  _stg_models.yml  stg_customers.sql  stg_orders.sql
seeds/: _seed_models.yml  exchange_rates.csv
