[project]
name = "dbt-dojo"
version = "0.1.0"
description = "dbt project for transforming packed JSON data in MySQL via Fivetran"
requires-python = ">=3.13"
dependencies = [
    "dbt-core",
    "dbt-mysql",
]

[dependency-groups]
dev = [
    "sqlfluff",
    "sqlfluff-templater-dbt",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
